--- a/RandomChance.html
+++ b/RandomChance.html
@@ -3,6 +3,16 @@
 <head>
 	<title>Fancy Array</title>
     <script type="text/javascript">
+    function playSlots(numOfQuarters){
+       while(numOfQuarters){
+           var win=Math.floor(Math.random(*100));
+           if(win==1){
+               var amountWon=Math.random()*50+50
+               return amountWon+numOfQuartes
+           }
+       }
+       return 0
+    }
          
     </script>
 </head>
